--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  color: #777;
+  color: #333;
   box-sizing: border-box;
 }
 
@@ -10,7 +10,7 @@ p {
 }
 
 .container {
-  width: 650px;
+  width: 750px;
   margin: 0 auto;
   font-family: sans-serif;
 }
@@ -24,8 +24,9 @@ p {
 }
 
 .portfolio-name {
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase;
+  letter-spacing: 1.42px;
 }
 
 .navigation-bar {
@@ -48,7 +49,7 @@ p {
 }
 
 .link:hover {
-  color: #cf9641;
+  color: darkgoldenrod;
   /* font-weight: bold; */
 }
 
@@ -58,6 +59,8 @@ p {
 
 .greet-world h2 {
   color: #000;
+  font-size: 32px;
+  letter-spacing: -1px;
 }
 
 .greet-world {
@@ -68,6 +71,7 @@ p {
   display: flex;
   align-items: flex-start;
   gap: 30px;
+  margin-bottom: 80px;
 }
 
 .linkedin-button {
@@ -83,18 +87,21 @@ p {
   color: white;
   font-size: 16px;
   letter-spacing: 2px;
-  background-color: #cf9641;
+  background-color: darkgoldenrod;
 }
 
 .linkedin-button:hover {
   background-color: white;
   color: black;
+  border: 2px solid black;
+  cursor: pointer;
 }
 
 .github-button:hover {
   background-color: white;
-  color: #cf9641;
-  border: 2px solid #cf9641;
+  color: darkgoldenrod;
+  border: 2px solid darkgoldenrod;
+  cursor: pointer;
 }
 
 .buttons {
@@ -104,9 +111,64 @@ p {
 
 .my-picture {
   padding: 10px;
-  border: 10px solid #cf9641;
+  border: 10px solid darkgoldenrod;
 }
 
 .information {
   flex: 1;
+}
+
+.text-information {
+  margin-bottom: 20px;
+}
+
+.projects-heading {
+  color: black;
+  margin-bottom: 20px;
+}
+
+.project-tiles {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 40px;
+}
+
+.first-tile,
+.second-tile {
+  display: inline-block;
+  flex: 1 50%;
+  border: 2px solid #444;
+  padding: 10px;
+  background-color: #e1e1e1;
+  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.15);
+}
+
+.nand2tetris:link,
+.text-editor:link {
+  display: inline-block;
+  margin-bottom: 10px;
+  font-style: italic;
+  color: orangered;
+  text-decoration: none;
+  letter-spacing: 2px;
+  font-size: 17px;
+}
+
+.nand2tetris:visited,
+.text-editor:visited {
+  color: darkgoldenrod;
+}
+
+.nand2tetris:hover,
+.text-editor:hover {
+  font-style: italic;
+  font-weight: bold;
+  color: rgb(103, 103, 255);
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.nand2tetris-desc,
+.text-editor-desc {
+  color: rgba(0, 0, 0, 0.6);
 }
