--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ p {
 
 .main-header {
   display: flex;
+  position: fixed;
   margin-top: 10px;
   align-items: center;
   justify-content: space-between;
